[package]
name = "symbol_math"
description = "This is a symbolic math library"
repository = "https://github.com/h2magic-axious/symbol_rust"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
